# MidiSynth

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  waveform_visualizer.c
include/: AudioEngine.hpp  MidiQueue.hpp  Oscilator.hpp  RingBuffer.hpp  TuningSys.hpp  VoiceManager.hpp
includes/: procedural_music.h
src/: AudioEngine.cpp  MidiQueue.cpp  Oscilator.cpp  RingBuffer.cpp  TuningSys.cpp  VoiceManager.cpp  main.c  main.cpp
src/notes_utils/: notes.c
src/wave_utils/: add_waves.c  generate_wave.c  stereo.c
